# rust_raytracer

./: .gitignore  README.md
raytracer/: Cargo.toml
raytracer/src/: main.rs  rt_classes.rs  rt_objects.rs
raytracer/src/rt_classes/: camera.rs  color.rs  hit.rs  image.rs  materials.rs  matrix.rs  ray.rs  samplers.rs  shape.rs  vector.rs
raytracer/src/rt_objects/: background.rs
