[package]
name = "raytracer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.10"
rand = { version = "0.8.5", features = ["small_rng"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
rand_xorshift = "0.3.0"
